@@ -7,7 +7,6 @@ use utf8;
 use Moo;
 use App::Sqitch::Types qw(URI Maybe Str Bool HashRef);
 use Locale::TextDomain qw(App-Sqitch);
-use Type::Utils qw(enum);
 use App::Sqitch::X qw(hurl);
 use List::Util qw(first);
 use namespace::autoclean;
