@@ -437,7 +437,7 @@ The database engine to use. Supported engines include:
 
 =over
 
-=item * C<pg> - L<PostgreSQL|https://postgresql.org/> and L<Postgres-XC|https://sourceforge.net/>
+=item * C<pg> - L<PostgreSQL|https://postgresql.org/>, L<Postgres-XC|https://sourceforge.net/projects/postgres-xc/>, and L<YugabyteDB|https://www.yugabyte.com/yugabytedb/>
 
 =item * C<sqlite> - L<SQLite|https://sqlite.org/>
 
