@@ -1,11 +1,13 @@
 Revision history for Perl extension App::Sqitch
 
 1.2.2
-
      - Fixed an issue when testing Firebird on a host with Firebird installed
        but no `isql`, and when using a local Firebird (e.g., the Engine12
        provider), which allows only one connection at a time. Thanks to Slaven
        Rezić for the the reproducible configuration (#597).
+     - Tweaked the Postgres engine to support Yugabyte. The only unsupported
+       features are explicit locks, so users need to manually ensure that only
+       one instance of Sqitch is updating the cluster at a time.
 
 1.2.1  2021-12-05T19:59:45Z
      - Updated all the live engine tests, aside from Oracle, to test with
